# snow-leopard

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: build-and-push-to-ecr.yml
terraform/: deployment.tf  ecr.tf  email-setup.tf  main.tf  run.tf
trading-notifications/: config.py  main.py
trading-notifications/data/loaders/: DataLoader.py  EodhdClient.py
trading-notifications/data/loaders/storage/: LocalStorageClient.py  S3StorageClient.py  StorageClient.py
trading-notifications/data/processing/: flags.py  indicators.py  notificationFlag.py
trading-notifications/notifications/: email.py  graphs.py
trading-notifications/smsecrets/: secrets.py
trading-notifications/utils/: tradingDay.py
